# ESMAT

./: .gitignore  CMakeLists.txt  README.md  esmat_setup.iss  setup_cspice.py
data/kernels/: solar_system_geophysics.ker
data/shaders/: line.vs  sphere.fs  sphere.vs
dependencies/cspice/doc/: dscriptn.txt  version.txt
dependencies/cspice/doc/html/info/: dscriptn.html
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
src/: Camera.h  CelestialBody.h  DataRecorder.h  ESailMesh.h  ElectricSail.h  LineRenderer.h  MissionSystem.h  Model.h  NavigationSystem.h  OutputScript.h  Shader.h  SolarWind.h  Spacecraft.h  Sphere.h  app_icon.rc  main.cpp
src/shaders/: sphere.fs
